# DoCodeDev

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: runtime-v2-eval.yml  test.yml
docs/: agent_mvp_status.md  runtime-v2-architecture.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: _inspect_trace.py  compare_holdout_traces.py  find_test_polluter.py  run_holdout_case.py  run_release_eval_suite.py  run_release_vertical_slice.py
src/: sitecustomize.py
tests/: __init__.py  test_action_keys.py  test_agent_loop.py  test_architecture_guards.py  test_artifact_actions.py  test_artifact_exporter.py  test_artifact_semantics.py  test_auth.py  test_cli.py  test_context.py  test_credentials.py  test_dobox_client.py  test_dobox_tools.py  test_eval.py  test_github_exporter.py  test_holdout_trace_runner.py  test_inspector.py  test_job_actions.py  test_job_routes.py  test_jobs_api.py  test_llm_runtime.py  test_local_tools.py  test_model_policy.py  test_module_identity.py  test_no_production_eval_fixtures.py  test_no_progress.py  test_outcome.py  test_production_anti_overfit.py  test_progress.py  test_prompt_output.py  test_quality_gate.py  test_quality_gate_json_producer.py  test_queue.py  test_real_dobox_crawler_smoke.py  test_real_dobox_external_crawler_smoke.py  test_real_dobox_smoke.py  test_real_dobox_source_inspection.py  test_real_llm_diagnostic_suite.py  test_real_llm_smoke.py  test_release_eval_suite.py  (+31 more)
tools/: mock_dobox.py
(+285 files in other folders)
